--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist",
+    "release": "npm run build && npm run deploy",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
+    "preview": "vite preview",
     "type": "tsc --noEmit"
   },
   "dependencies": {
